@@ -278,7 +278,7 @@ bool CALLBACK_HIDParser_FilterHIDReportItem(HID_ReportItem_t* CurrentItem)
 
 	/* Iterate through the item's collection path, until either the root collection node or a collection with the
 	 * Mouse Usage is found - this prevents Joysticks, which use identical descriptors except for the Joystick usage
-	 * parent node, from being erroneously treated as a mouse
+	 * parent node, from being erroneously treated as a mouse by the demo
 	 */
 	for (HID_CollectionPath_t* CurrPath = CurrentItem->CollectionPath; CurrPath != NULL; CurrPath = CurrPath->Parent)
 	{
